--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
+DARK COLOR SCHEME 
+#24262b - hsl(223 8.9% 15.5%) - Background
+#181a1f - hsl(223 12.7% 10.8%) - Card
+#484b59 - hsl(229 10.6% 31.6%) - Button Active
+#373a43 - hsl(225 9.8% 23.9%) - Hover
+#3f4350 - hsl(226 11.9% 28%) - Active Hover
+#fbfbfb - hsl(0 0% 98.4%) - Foreground
+*/
+
+/* 
+LIGHT COLOR SCHEME 
+#edeff2 - hsl(216 16.1% 93.9%) - Background
+#ffffff - hsl(0 0% 100%) - Card
+#ebedf0 - hsl(0 0% 84.9%) - Hover
+#16181a - hsl(210 8.3% 9.4%) - Foreground
+*/
+
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --foreground: 223 8.9% 15.5%;
 
     --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --card-foreground: 223 12.7% 10.8%;
+
+    --active: 229 10.6% 31.6%;
+    --active-hover: 226 11.9% 28%;
+    --hover: 225 9.8% 23.9%;
 
     --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover-foreground: 223 8.9% 15.5%;
 
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
@@ -30,19 +52,23 @@
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+    --ring: 223 8.9% 15.5%;
 
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: 223 8.9% 15.5%;
+    --foreground: 0 0% 98.4%;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --card: 223 12.7% 10.8%;
+    --card-foreground: 0 0% 98.4%;
 
-    --popover: 222.2 84% 4.9%;
+    --active: 229 10.6% 31.6%;
+    --hover: 225 9.8% 23.9%;
+    --active-hover: 226 11.9% 28%;
+
+    --popover: 223 12.7% 10.8%;
     --popover-foreground: 210 40% 98%;
 
     --primary: 210 40% 98%;
